# best-photo-picker

./: .gitignore  CLAUDE.md  CONTEXT.md  LICENSE  README.md  appcast.xml  config.example.toml  pyproject.toml
bestphoto/: binning.py  bursts.py  cli.py  config.py  contact.py  detect.py  exif.py  manifest.py  pipeline.py  review.py  sharpness.py
core/: config.example.toml  pyproject.toml
core/bestphoto/: __init__.py  binning.py  bursts.py  cli.py  config.py  contact.py  decode.py  detect.py  exposure.py  eyes.py  jsonout.py  log.py  manifest.py  phash.py  pipeline.py  review.py  sharpness.py
core/tests/: test_jsonout.py  test_logic.py  test_workers.py
docs/: design-brief.md
docs/adr/: 0001-manifest-first-never-move-originals.md  0002-score-on-mac-stage-as-symlinks.md  0003-yunet-for-detection-landmarker-for-eyes.md  0004-two-grouping-strategies.md  0005-native-macos-app-over-python-core.md  0006-favourite-is-the-human-verdict.md  0007-monorepo-core-macos-layout.md  0008-cli-json-contract-for-the-app.md  0009-parallel-scoring-process-pool.md  0010-sparkle-auto-update-over-github-releases.md
macos/: Makefile  README.md
macos/BestPhotoPicker/: AppModel.swift  BestPhotoPickerApp.swift  Info.plist  RootView.swift
macos/BestPhotoPicker.xcodeproj/: project.pbxproj
macos/BestPhotoPicker/Chrome/: FooterBar.swift  IconButton.swift  PrimaryButton.swift  TitleBar.swift  WindowChrome.swift
macos/BestPhotoPicker/Core/: AppUpdater.swift  CoreBridge.swift  FrameDisplay.swift  Histogram.swift  ImageCache.swift  ScoreContract.swift  SubprocessScoringEngine.swift  ThumbnailDecoder.swift
macos/BestPhotoPicker/DesignSystem/: Animations.swift  Color+Hex.swift  FontRegistration.swift  Icons.swift  (+4 more)
macos/scripts/: build-embedded-core.sh  bundle-app.sh  release.sh
tests/: test_golden.py  test_logic.py
tests/golden/: manifest_sim.csv  manifest_time.csv
(+31 files in other folders)
