[project]
name = "best-photo-picker"
version = "0.1.0"
description = "Burst-aware JPEG culler — non-destructive, manifest-first."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.9",
    "Pillow>=10.2",
    "numpy>=1.26",
    "structlog>=24.1",
]

[project.optional-dependencies]
# Face boxes + eye landmarks (eyes-open gate + subject region). Without it the tool runs on
# sharpness + exposure only.
faces = ["mediapipe>=0.10"]

[dependency-groups]
dev = ["pytest>=8"]

[project.scripts]
bestphoto = "bestphoto.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bestphoto"]
